# mfc

./: .gitignore  .stylish-haskell.yaml  Makefile  README.md  mfc.cabal
.github/workflows/: ci.yml
app/: Main.hs
examples/: error.macaf  test.macaf
src/: Macaf.hs  Main.hs
src/Macaf/: Ast.hs  Codegen.hs  MessageType.hs  Sast.hs  Semant.hs  Utils.hs
src/Macaf/Parser/: Combinator.hs
src/Macaf/Scanner/: Combinator.hs
