cabal-version:      1.12
name:               mfc
version:            0.1.0.0
license:            BSD3
license-file:       LICENSE
maintainer:         Leo
author:             Leo
homepage:           https://github.com/leo/mfc#readme
bug-reports:        https://github.com/leo/mfc/issues
synopsis:           A Maca Fortran Compiler In Haskell
category:           Compilers/Interpreters
build-type:         Simple
extra-source-files: README.md

library
    exposed-modules:
        Macaf
        Macaf.Ast
        Macaf.Codegen
        Macaf.Parser.Combinator
        Macaf.Sast
        Macaf.Scanner.Combinator
        Macaf.Semant
        Macaf.MessageType
        Macaf.Utils

    hs-source-dirs:     src
    other-modules:      Paths_mfc
    default-language:   Haskell2010
    default-extensions: OverloadedStrings LambdaCase
    ghc-options:
        -Wall -fno-warn-name-shadowing -Wcompat -Wincomplete-uni-patterns

    build-depends:
        array,
        base >=4.7 && <5,
        bytestring,
        containers,
        directory,
        filepath,
        llvm-hs-pretty >=0.9 && <1,
        llvm-hs-pure >=9 && <10,
        megaparsec,
        mtl,
        parser-combinators,
        prettyprinter,
        string-conversions,
        text

executable mfc
    main-is:            Main.hs
    hs-source-dirs:     app
    other-modules:      Paths_mfc
    default-language:   Haskell2010
    default-extensions: OverloadedStrings LambdaCase
    ghc-options:
        -Wall -fno-warn-name-shadowing -Wcompat -Wincomplete-uni-patterns

    build-depends:
        array,
        base >=4.7 && <5,
        bytestring,
        containers,
        directory,
        filepath,
        llvm-hs-pretty >=0.9 && <1,
        llvm-hs-pure >=9 && <10,
        mfc,
        megaparsec,
        mtl,
        optparse-applicative,
        parser-combinators,
        prettyprinter,
        string-conversions,
        text
